<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".activities.NewTaskActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/tv_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/add_new_meeting"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"/>

    <LinearLayout
        android:id="@+id/et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tv_new_task"
        android:gravity="center_horizontal"
        android:background="@drawable/border_new_meeting"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:id="@+id/et_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/enter_meeting_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:fontFamily="@font/montserrat"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/enter_meeting_description"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:fontFamily="@font/montserrat"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/et_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:inputType="date"
                android:layout_weight="1"
                android:hint="@string/enter_date"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:fontFamily="@font/montserrat"
                android:layout_marginEnd="8dp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_date"
                android:layout_weight="1"
                android:backgroundTint="@color/register_bk_color"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <EditText
                android:id="@+id/et_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:inputType="date"
                android:layout_weight="1"
                android:hint="@string/enter_time"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:fontFamily="@font/montserrat"
                android:layout_marginEnd="8dp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_time"
                android:layout_weight="1"
                android:backgroundTint="@color/register_bk_color"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"/>

        </LinearLayout>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:headerBackground="@color/register_bk_color"
            android:visibility="gone"/>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:visibility="gone"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/et_layout"
        android:gravity="center_horizontal"
        android:weightSum="2"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"
            android:backgroundTint="#FD6A6A"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_new_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_meeting"
            android:layout_weight="1"
            android:backgroundTint="#96ED31"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</RelativeLayout>