<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity"
    android:background="#fff">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:gravity="center_vertical"
        android:background="#8499F6"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:adjustViewBounds="true"
            android:layout_marginStart="@dimen/_8sdp"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_toEndOf="@id/backImage"
            android:fontFamily="@font/montserrat"
            android:gravity="center_vertical"
            android:text="@string/about_our_project"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layoutHeader">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/about_2"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/about_text_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/about_1"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/about_text_1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12sdp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/about_image_3png"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/about_text_3"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12sdp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/about_4"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/about_text_4"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12sdp"/>

            </LinearLayout>

        </ScrollView>

</RelativeLayout>